# stark-verifier

./: Cargo.toml  README.md  proof.hex
contracts/: Fri.sol  MemoryAccessUtils.sol  MemoryMap.sol  MerkleVerifierKeccak.sol  PrimeFieldElement0.sol  Prng.sol  StarkParameters.sol  StarkVerifier.sol
src/: .main.rs.swp  deserializer.rs  fft.rs  lib.rs  main.rs  merkle_tree.rs  proof.rs  utils.rs
verifier/: Cargo.toml
verifier/ff/: Cargo.toml
verifier/ff/src/: lib.rs
verifier/src/: .main.rs.swp  ff.rs  main.rs  proof.rs
