[package]
name = "stark_verifier"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
publish = false
edition = "2018"

[dependencies]
rustfft = "3.0.0"
num-bigint = { git = "https://github.com/jwasinger/num-bigint", branch = "feature/pow"}
blake2 = "0.8.0"
hex = "0.3.1"

[lib]
crate-type = ["cdylib"]
