[package]
name = "stark_verifier"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
publish = false
edition = "2018"

[dependencies]
rustfft = "3.0.0"
num-bigint = { git = "https://github.com/jwasinger/num-bigint", branch = "feature/pow"}
blake2 = "0.8.0"
hex = "0.3.1"


[dependencies.ewasm_api]
git = "https://github.com/ewasm/ewasm-rust-api"
rev = "1c01982"
default-features = false
features = ["std", "eth2", "qimalloc"]

[lib]
crate-type = ["cdylib", "rlib"]
