[package]
name = "ff"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
edition = "2018"

[dependencies]
rustfft = "3.0.0"
polynomial = { git = "https://github.com/gifnksm/polynomial-rs", rev = "eb85a4e55" }
# librustzcash = { git = "https://github.com/zcash/librustzcash", rev = "3b6f5e3d5" }
# ff = { version = "0.4.0", features = ["derive"] }
# rand = "0.6.5"
num-complex = "0.2.1"
# ramp = "0.5.1"
# num-bigint = "0.2.0"
num-bigint = { git = "https://github.com/jwasinger/num-bigint", branch = "feature/pow"}
lazy_static = "1.3.0"

[lib]
name = "ff"
